--- a/Ember/Properties/Resources.resx
+++ b/Ember/Properties/Resources.resx
@@ -118,16 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="NoAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\NoAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="FlameAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\FlameAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TopBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\TopBar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ClockedOutAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ClockedOutAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="xOff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\xOff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SmotheredAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\SmotheredAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NoAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\NoAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="xOffHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\xOffHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
