--- a/Ember/Properties/Resources.resx
+++ b/Ember/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="ClockedOutAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ClockedOutAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="xOffHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\xOffHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="xOff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\xOff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,7 +139,10 @@
   <data name="NoAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\NoAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="xOffHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\xOffHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="list" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="listHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\listHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
