--- a/Ember/Properties/Resources.resx
+++ b/Ember/Properties/Resources.resx
@@ -127,11 +127,17 @@
   <data name="ClockedOutAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ClockedOutAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="list" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="xOffHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\xOffHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="xOff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\xOff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="listHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\listHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SmotheredAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\SmotheredAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,10 +145,7 @@
   <data name="NoAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\NoAnimation.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="list" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="listHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\listHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="FlameMiddle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\FlameMiddle.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
